fixed the spacing of the lose and win message

--- a/CSS/ScreenOutlines.css
+++ b/CSS/ScreenOutlines.css
@@ -234,7 +234,7 @@ th, td {
   padding: 10px 10px 0 10px;
   margin-top: 10px;
   margin-left: -460px;
-  inline-size: 340px;
+  inline-size: 310px;
   overflow-wrap: break-word;
 }
 
